<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Linkbasher</string>

    <string name="title_activity_main">Linkbasher</string>
    <string name="title_activity_resolver">Linkbasher</string>

    <string name="toast_resolving">Resolving link...</string>
    <string name="toast_got_404">Got "404 - File Not Found" resolving link! You might want to open it in your browser.</string>
    <string name="toast_got_non_30x">There was an error resolving the shortened URL. You might want to open it in your browser.</string>
    <string name="toast_misc_error">There was an error resolving the shortened URL. You might want to open it in your browser.</string>
    <string name="toast_max_redirects">Exceeded maximum number of redirects</string>
    <string name="toast_redirect_loop">Possible redirect loop detected</string>

    <string name="main_description">Linkbasher saves you time by resolving shortened links without opening your browser.</string>

    <string name="domains_header">Supported domains</string>
    <string name="domains_body">bit.ly, dnlchw.net, fb.me, goo.gl, ift.tt, is.gd, ow.ly, t.co, tinyurl.com, tmblr.co, wp.me</string>

    <string name="howto_header">How to use</string>
    <string name="howto_body">
        The next time you tap on a shortened link and are prompted with a list of apps, choose \"Linkbasher\" then hit \"Always\". Linkbasher will do the rest!
        (Linkbasher will prompt you to choose a different app if for any reason it can\'t resolve the given link.)
    </string>

    <string name="moreinfo_header">More info</string>
    <string name="moreinfo_body">Linkbasher was written by David Johnston. The source code can be found on GitHub: http://github.com/johnsto/linkbasher</string>


    <string name="count_header">Linkbasher has bashed</string>
    <string name="count_footer">links for you</string>
</resources>