<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:text="@string/main_description"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:textColor="@android:color/holo_blue_light"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/howto_header"
            android:layout_marginTop="@dimen/panel_margin"
            android:textSize="@dimen/font_medium"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/howto_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/domains_header"
            android:layout_marginTop="@dimen/panel_margin"
            android:textSize="@dimen/font_medium"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/domains_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:background="#33ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/panel_margin"
            android:padding="8dp">

            <TextView
                android:id="@+id/count_title"
                android:text="@string/count_header"
                android:gravity="center_horizontal"
                android:textSize="@dimen/font_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/count"
                android:hint="0"
                android:textSize="@dimen/font_xlarge"
                android:gravity="center_horizontal"
                android:layout_below="@id/count_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/count_times"
                android:textSize="@dimen/font_medium"
                android:text="@string/count_footer"
                android:gravity="center_horizontal"
                android:layout_below="@id/count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>